<resources>
    <string name="app_name">MovieAsker Alpha</string>
    <string name="app_slogan">Movies for any tastes</string>

    <string name="search_item_title">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header_login">Your login</string>
    <string name="navigation_header_email">your-email@email.com</string>

    <string name="registration_item_title">REGISTRATION</string>
    <string name="new_item_title">NEW</string>
    <string name="favorite_item_title">FAVORITE</string>
    <string name="looked_item_title">LOOKED</string>
    <string name="setting_item_title">SETTINGS</string>
    <string name="about_item_title">ABOUT APP</string>

    <string name="registration_title">Registration</string>
    <string name="welcome_registration_text">Welcome to MovieAsker registration.</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="email_hint">Email</string>
    <string name="create_user_button_title">Create User</string>

    <string name="login_empty_warning">Login must not be empty</string>
    <string name="login_length_warning">Login can`t be less 3 symbols</string>
    <string name="password_empty_warning">Password must not be empty</string>
    <string name="password_length_warning">Password can`t be less 4 symbols</string>
    <string name="repeat_password_empty_warning">Repeat password must not be empty</string>
    <string name="passwords_not_equals_warning">Password and Repeat password not equals</string>
    <string name="email_empty_warning">Email must not be empty</string>
    <string name="login_exists_warning">This login already registered</string>

    <string name="dialog_info_title">Information</string>
    <string name="dialog_warning_title">Warning</string>
    <string name="dialog_bad_internet_connection_message">Check your Internet connection and click to repeat loading</string>
    <string name="dialog_create_user_successful_message">Wonderful! You registered in MovieAsker system</string>
    <string name="dialog_user_not_registered_message">You are not logged in. Sign up?</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>

    <string name="new_empty_content_text">New movies is not found</string>
    <string name="favorite_empty_content_text">You have not added movies to Favorites</string>
    <string name="looked_empty_content_text">You have not added movies are Looked</string>
    <string name="user_not_registered_content_text">You are not registered in MovieAsker</string>

    <string name="repeat_loading_content_title">Repeat loading</string>

    <string name="film_description_title">Description</string>
    <string name="film_year_text">Release year</string>
    <string name="film_genres_text">Genres</string>
    <string name="film_duration_text">Duration</string>
    <string name="film_countries_text">Countries</string>
    <string name="film_producers_text">Producers</string>
    <string name="film_writers_text">Writers</string>
    <string name="film_directors_text">Directors</string>
    <string name="film_rating_block_title">Rating</string>
    <string name="film_votes_count_title">Votes</string>
    <string name="film_creators_block_title">Creators</string>
    <string name="film_actors_block_title">Actors</string>
    <string name="film_about_block_title">About movie</string>

    <string name="film_to_favorite_text">Movie added to Favorite</string>
    <string name="film_to_looked_text">Movie added to Looked</string>
    <string name="review_added_film_text">Your review added successful</string>

    <string name="review_title">Film review</string>
    <string name="review_header_hint">Header</string>
    <string name="review_text_hint">Review text</string>
    <string name="review_add_button_title">Add review</string>
    <string name="header_empty_warning">Header must not be empty</string>
    <string name="review_empty_warning">Review text must not be empty</string>

    <string name="about_title">About application</string>
    <string name="about_app_text">MovieAsker is multimedia application created for real movie funs. Your personal movie diary which you can share with thousands of fans around the world. Your friends know all about your movie taste.</string>
    <string name="about_developer_block_title">Developer</string>
    <string name="about_developer_name">Marchenko Oleg</string>
    <string name="about_idea_master_block_title">Inspirer</string>
    <string name="about_idea_master_name">Bondar Margarita</string>
</resources>
