<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/registration_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/registration_title"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/welcome_registration_text"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/login_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/login_hint" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/password_hint"
                            android:inputType="textPassword" />

                        <CheckBox
                            android:id="@+id/show_password_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/repeat_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/repeat_password_hint" />

                    <EditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email_hint" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_user_button_title" />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">

            <ProgressBar
                android:id="@+id/state_registration_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity = "center_vertical|center_horizontal"
                android:visibility="gone"
                style="?android:attr/progressBarStyleLarge" />

        </FrameLayout>

    </LinearLayout>
</LinearLayout>