<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:fitsSystemWindows="true"
    tools:context=".activity.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppThemeBase.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/about_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppThemeBase.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_slogan"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="@color/black_overlay"
                android:typeface="serif" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/film_view_vertical_margin"
                android:layout_marginBottom="@dimen/film_view_vertical_margin"
                android:background="@color/color_primary_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/about_app_text"
                android:textSize="20sp"
                android:typeface="serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/film_view_vertical_margin"
                android:layout_marginBottom="@dimen/film_view_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/about_developer_block_title"
                android:textColor="@color/color_background"
                android:textStyle="bold"
                android:textSize="14sp"
                android:typeface="serif"
                android:background="@color/color_primary_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/about_developer_name"
                android:textStyle="italic"
                android:typeface="serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/film_view_vertical_margin"
                android:layout_marginBottom="@dimen/film_view_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/about_idea_master_block_title"
                android:textColor="@color/color_background"
                android:textStyle="bold"
                android:textSize="14sp"
                android:typeface="serif"
                android:background="@color/color_primary_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/about_idea_master_name"
                android:textStyle="italic"
                android:typeface="serif" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>